basic nav bar added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <h1>Welcome to Online Food Service</h1>
+    <nav class="vab-bar">
+        <div class="left">
+            <img class="logo" src="./images/food_logo.png" alt="logo">
+            <div class="delivery-info">
+                <p class="delivery-type">Home Delivery</p>
+                <p class="delivery-addr">xyz, street 34, I-14</p>
+            </div>
+        </div>
+
+        <div class="right">
+            <form  id="search-form"> 
+                <input type="search" id="search" name="search" placeholder="Search...">
+                <button class="btn-search">Search</button>
+              </form>
+            <button class="btn-cart">🛒</button>
+            <button class="btn-status">Signup</button>
+
+        </div>
+    </nav>
 </body>
 </html>
