fix the scroll issue of main, fixed nav and aside and make scrollable the main section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <nav class="vab-bar">
+    <nav class="nav-bar">
         <div class="left">
             <img class="logo" src="./images/food_logo.png" alt="logo">
             <div class="delivery-info">
