add sizes and addToCard button to pizza section

--- a/index.html
+++ b/index.html
@@ -51,10 +51,16 @@
                         <p class="item-name">Vege1</p>
                         <p class="item-detail">salt+pepper</p>
                         <div class="item-count">
+                            <select name="" id="sizes">
+                                <option value="">small</option>
+                                <option value="">medium</option>
+                                <option value="">large</option>
+                            </select>
                             <button class="minus">-</button>
-                            <p class="item-total">2</p>
+                            <p class="item-total">3</p>
                             <button class="plus">+</button>
-                            <p class="item-price">Rs.500</p>
+                            <button class="btn-addToCart">Add to Cart</button>
+                            <p class="item-price">Rs.800</p>
                         </div>
                     </div>
                 </div>
@@ -64,10 +70,16 @@
                         <p class="item-name">Vege2</p>
                         <p class="item-detail">salt+pepper</p>
                         <div class="item-count">
+                            <select name="" id="sizes">
+                                <option value="">small</option>
+                                <option value="">medium</option>
+                                <option value="">large</option>
+                            </select>
                             <button class="minus">-</button>
-                            <p class="item-total">2</p>
+                            <p class="item-total">3</p>
                             <button class="plus">+</button>
-                            <p class="item-price">Rs.1000</p>
+                            <button class="btn-addToCart">Add to Cart</button>
+                            <p class="item-price">Rs.800</p>
                         </div>
                     </div>
                 </div>
@@ -77,9 +89,15 @@
                         <p class="item-name">Vege3</p>
                         <p class="item-detail">salt+pepper</p>
                         <div class="item-count">
+                            <select name="" id="sizes">
+                                <option value="">small</option>
+                                <option value="">medium</option>
+                                <option value="">large</option>
+                            </select>
                             <button class="minus">-</button>
                             <p class="item-total">3</p>
                             <button class="plus">+</button>
+                            <button class="btn-addToCart">Add to Cart</button>
                             <p class="item-price">Rs.800</p>
                         </div>
                     </div>
@@ -90,10 +108,16 @@
                         <p class="item-name">/vege4</p>
                         <p class="item-detail">salt+pepper</p>
                         <div class="item-count">
+                            <select name="" id="sizes">
+                                <option value="">small</option>
+                                <option value="">medium</option>
+                                <option value="">large</option>
+                            </select>
                             <button class="minus">-</button>
-                            <p class="item-total">4</p>
+                            <p class="item-total">3</p>
                             <button class="plus">+</button>
-                            <p class="item-price">Rs. 1500</p>
+                            <button class="btn-addToCart">Add to Cart</button>
+                            <p class="item-price">Rs.800</p>
                         </div>
                     </div>
                 </div>
