--- a/index.html
+++ b/index.html
@@ -27,6 +27,42 @@
         </div>
     </nav>
 
+    <section id="cart-section">
+        <h3>My Cart</h3>
+        <div class="cart-items">
+            <div class="cart-item">
+                <img src="" alt="" class="img-cartItem">
+                <p class="name-cartItem">Roasted Red Pepper</p>
+                <p class="size-cartItem">Regular</p>
+                <div class="customize-cartItem">
+                    <button class="btn-cartCustomize btnn">-</button>
+                    <p class="btn-cartCustomize btnn">1</p>
+                    <button class="btn-cartCustomize btnn">+</button>
+                    <button class="btn-cartCustomize btnn">✎</button>
+                    <button class="btn-cartCustomize btnn">🗑️</button>
+                </div>
+                <p class="price-cartItem">Rs 100</p>
+            </div>
+        </div>
+        <div class="cart-total">
+            <div class="alpha">
+                <p>Subtotal</p>
+                <p>Sales tax</p>
+                <p>Delivery</p>
+                <p>Total</p>
+            </div>
+            <div class="numeric">
+                <p>Rs.100</p>
+                <p>Rs.20</p>
+                <p>Rs.150</p>
+                <p>Rs.270</p>
+            </div>
+        </div>
+        <button class="btn-checkout">
+            Checkout
+        </button>
+    </section>
+
     <!-- main section -->
     <main id="main">
         <aside class="food-category">
