fix cart-item container

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
         <h3>My Cart</h3>
         <div class="cart-items">
             <div class="cart-item">
-                <img src="" alt="" class="img-cartItem">
-                <p class="name-cartItem">Roasted Red Pepper</p>
-                <p class="size-cartItem">Regular</p>
+                <img src="./images/pizza.jpg" alt="" class="img-cartItem">
+                <div class="item-detail">
+                    <p class="name-cartItem">Roasted Red Pepper</p>
+                    <p class="size-cartItem">Regular</p>
+                </div>
                 <div class="customize-cartItem">
                     <button class="btn-cartCustomize btnn">-</button>
                     <p class="btn-cartCustomize btnn">1</p>
@@ -557,5 +559,6 @@
         </div>
     </main>
 
+    <script src="./js/index.js"></script>
 </body>
 </html>
