--- a/index.html
+++ b/index.html
@@ -46,23 +46,26 @@
                 <p class="price-cartItem">Rs 100</p>
             </div>
         </div>
-        <div class="cart-total">
-            <div class="alpha">
-                <p>Subtotal</p>
-                <p>Sales tax</p>
-                <p>Delivery</p>
-                <p>Total</p>
-            </div>
-            <div class="numeric">
-                <p>Rs.100</p>
-                <p>Rs.20</p>
-                <p>Rs.150</p>
-                <p>Rs.270</p>
-            </div>
+        <div id="cart-total">
+            <!-- <div class="cart-total"> -->
+                <div class="alpha">
+                    <p>Subtotal</p>
+                    <p>Sales tax</p>
+                    <p>Delivery</p>
+                    <p>Total</p>
+                </div>
+                <div class="numeric">
+                    <p>Rs.100</p>
+                    <p>Rs.20</p>
+                    <p>Rs.150</p>
+                    <p>Rs.270</p>
+                </div>
+            <!-- </div> -->
+            <button class="btn-checkout">
+                Checkout
+            </button>
         </div>
-        <button class="btn-checkout">
-            Checkout
-        </button>
+        
     </section>
 
     <!-- main section -->
