add customization btn to food-item and fix the cart section

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                                 <option value="">medium</option>
                                 <option value="">large</option>
                             </select>
+                            <button class="customize">✎</button>
                             <button class="minus">-</button>
                             <p class="item-total">0</p>
                             <button class="plus">+</button>
@@ -116,6 +117,7 @@
                                 <option value="">medium</option>
                                 <option value="">large</option>
                             </select>
+                            <button class="customize">✎</button>
                             <button class="minus">-</button>
                             <p class="item-total">3</p>
                             <button class="plus">+</button>
@@ -135,6 +137,7 @@
                                 <option value="">medium</option>
                                 <option value="">large</option>
                             </select>
+                            <button class="customize">✎</button>
                             <button class="minus">-</button>
                             <p class="item-total">3</p>
                             <button class="plus">+</button>
@@ -154,6 +157,7 @@
                                 <option value="">medium</option>
                                 <option value="">large</option>
                             </select>
+                            <button class="customize">✎</button>
                             <button class="minus">-</button>
                             <p class="item-total">3</p>
                             <button class="plus">+</button>
