add item customization section for toppings etc

--- a/index.html
+++ b/index.html
@@ -566,6 +566,41 @@
         </div>
     </main>
 
+    <div class="customize-item-container">
+        <div class="img-section">
+            <img src="./images/pizza.jpg" alt="">
+        </div>
+        <div class="customize-section">
+            <h2 class="">Veg Pizza</h2>
+            <p>Select Your Size</p>
+            <select class="item-sizes" name="" id="">
+                <option value="">Regular - Rs800</option>
+                <option value="">Medium - Rs1000</option>
+                <option value="">Large - Rs1200</option>
+            </select>
+            <h4 class="topping-heading">Toppings-Veggies</h4>
+            <div class="topping-section">
+                <div class="toppings">
+                    <input type="checkbox" class="topping" name="" value="">
+                    <label for="checkbox">Olives</label><br>
+                    <input type="checkbox" class="topping" name="" value="">
+                    <label for="checkbox">Broccoli</label><br>
+                    <input type="checkbox" class="topping" name="" value="">
+                    <label for="checkbox">Cheese</label><br>
+                    <input type="checkbox" class="topping" name="" value="">
+                    <label for="checkbox">Fresh Mushrooms</label><br>
+                </div>
+                <div class="topping-price">
+                    <p class="price">Rs50</p>
+                    <p class="price">Rs50</p>
+                    <p class="price">Rs50</p>
+                    <p class="price">Rs50</p>
+                </div>
+            </div>
+            <button class="add-to-cart">Add To Cart</button>
+        </div>
+    </div>
+
     <script src="./js/index.js"></script>
 </body>
 </html>
