Refactor: Modularize cart, item count and item customization logic into functions

--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
         </div>
     </main>
 
-    <div class="customize-item-container">
+    <div class="customize-item-container" style="display: none;">
         <div class="img-section">
             <img src="./images/pizza.jpg" alt="">
         </div>
