working on addToCart() funciton

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
         <h3>My Cart</h3>
         <div class="cart-items">
             <div class="cart-item">
-                <img src="./images/pizza.jpg" alt="" class="img-cartItem">
+                <img src="" alt="" class="img-cartItem">
                 <div class="item-detail">
-                    <p class="name-cartItem">Roasted Red Pepper</p>
-                    <p class="size-cartItem">Regular</p>
+                    <p class="name-cartItem"></p>
+                    <p class="size-cartItem"></p>
                 </div>
                 <div class="customize-cartItem">
                     <button class="btn-cartCustomize btnn">-</button>
-                    <p class="btn-cartCustomize btnn">1</p>
+                    <p class="btn-cartCustomize btnn"></p>
                     <button class="btn-cartCustomize btnn">+</button>
                     <button class="btn-cartCustomize btnn">✎</button>
                     <button class="btn-cartCustomize btnn">🗑️</button>
                 </div>
-                <p class="price-cartItem">Rs 100</p>
+                <p class="price-cartItem"></p>
             </div>
         </div>
         <div id="cart-total">
