fix: correct item and size now added to cart on addToCart button click

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="customize-cartItem">
                     <button class="btn-cartCustomize btnn">-</button>
-                    <p class="btn-cartCustomize btnn"></p>
+                    <p class="btn-cartCustomize btnn hhh"></p>
                     <button class="btn-cartCustomize btnn">+</button>
                     <button class="btn-cartCustomize btnn">✎</button>
                     <button class="btn-cartCustomize btnn">🗑️</button>
@@ -93,9 +93,9 @@
                         <p class="item-detail">salt+pepper</p>
                         <div class="item-count">
                             <select name="" id="sizes">
-                                <option value="">small</option>
-                                <option value="">medium</option>
-                                <option value="">large</option>
+                                <option value="small">small</option>
+                                <option value="medium">medium</option>
+                                <option value="large">large</option>
                             </select>
                             <button class="customize">✎</button>
                             <button class="minus">-</button>
@@ -107,15 +107,15 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="./images/pizza.jpg" alt="" class="item-image">
+                    <img src="./images/pizza2.png" alt="" class="item-image">
                     <div class="item-desc">
                         <p class="item-name">Vege2</p>
                         <p class="item-detail">salt+pepper</p>
                         <div class="item-count">
                             <select name="" id="sizes">
-                                <option value="">small</option>
-                                <option value="">medium</option>
-                                <option value="">large</option>
+                                <option value="small">small</option>
+                                <option value="medium">medium</option>
+                                <option value="large">large</option>
                             </select>
                             <button class="customize">✎</button>
                             <button class="minus">-</button>
@@ -127,15 +127,15 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="./images/pizza.jpg" alt="" class="item-image">
+                    <img src="./images/pizza3.png" alt="" class="item-image">
                     <div class="item-desc">
                         <p class="item-name">Vege3</p>
                         <p class="item-detail">salt+pepper</p>
                         <div class="item-count">
                             <select name="" id="sizes">
-                                <option value="">small</option>
-                                <option value="">medium</option>
-                                <option value="">large</option>
+                                <option value="small">small</option>
+                                <option value="medium">medium</option>
+                                <option value="large">large</option>
                             </select>
                             <button class="customize">✎</button>
                             <button class="minus">-</button>
@@ -147,15 +147,15 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="./images/pizza.jpg" alt="" class="item-image">
+                    <img src="./images/pizza4.png" alt="" class="item-image">
                     <div class="item-desc">
-                        <p class="item-name">/vege4</p>
+                        <p class="item-name">Vege4</p>
                         <p class="item-detail">salt+pepper</p>
                         <div class="item-count">
                             <select name="" id="sizes">
-                                <option value="">small</option>
-                                <option value="">medium</option>
-                                <option value="">large</option>
+                                <option value="small">small</option>
+                                <option value="medium">medium</option>
+                                <option value="large">large</option>
                             </select>
                             <button class="customize">✎</button>
                             <button class="minus">-</button>
