refactor: make separete funcitons for item increment and decrement

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                     <p class="size-cartItem"></p>
                 </div>
                 <div class="customize-cartItem">
-                    <button class="btn-cartCustomize btnn">-</button>
-                    <p class="btn-cartCustomize btnn hhh"></p>
-                    <button class="btn-cartCustomize btnn">+</button>
+                    <button class="btn-cartCustomize btnn minus">-</button>
+                    <p class="btn-cartCustomize btnn item-total "></p>
+                    <button class="btn-cartCustomize btnn plus">+</button>
                     <button class="btn-cartCustomize btnn">✎</button>
                     <button class="btn-cartCustomize btnn">🗑️</button>
                 </div>
