fix: the override of cart item, now each item is shown individually

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section id="cart-section">
         <h3>My Cart</h3>
         <div class="cart-items">
-            <div class="cart-item">
+            <div class="cart-item" style="display: none;">
                 <img src="" alt="" class="img-cartItem">
                 <div class="item-detail">
                     <p class="name-cartItem"></p>
