added some picture for deal seciton and fix meal section item-count

--- a/index.html
+++ b/index.html
@@ -171,54 +171,82 @@
             <h3 id="deal-section" class="item-category">Mega Deal</h3>
             <section class="section veg">
                 <div class="item">
-                    <img src="" alt="" class="item-image">
+                    <img src="./images/deal1.png" alt="" class="item-image">
                     <div class="item-desc">
-                        <p class="item-name"></p>
-                        <p class="item-detail"></p>
+                        <p class="item-name">Deal 1</p>
+                        <p class="item-detail">burger, pizza, fries</p>
                         <div class="item-count">
-                            <button class="minus"></button>
-                            <p class="item-total"></p>
-                            <button class="plus"></button>
-                            <p class="item-price"></p>
+                            <select name="" id="sizes">
+                                <option value="small">small</option>
+                                <option value="medium">medium</option>
+                                <option value="large">large</option>
+                            </select>
+                            <button class="customize">✎</button>
+                            <button class="minus">-</button>
+                            <p class="item-total">3</p>
+                            <button class="plus">+</button>
+                            <button class="btn-addToCart">Add to Cart</button>
+                            <p class="item-price">Rs.1500</p>
                         </div>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="" alt="" class="item-image">
+                    <img src="./images/deal2.png" alt="" class="item-image">
                     <div class="item-desc">
-                        <p class="item-name"></p>
-                        <p class="item-detail"></p>
+                        <p class="item-name">Deal 2</p>
+                        <p class="item-detail">burger, chicken piece, fries, diet coke</p>
                         <div class="item-count">
-                            <button class="minus"></button>
-                            <p class="item-total"></p>
-                            <button class="plus"></button>
-                            <p class="item-price"></p>
+                            <select name="" id="sizes">
+                                <option value="small">small</option>
+                                <option value="medium">medium</option>
+                                <option value="large">large</option>
+                            </select>
+                            <button class="customize">✎</button>
+                            <button class="minus">-</button>
+                            <p class="item-total">3</p>
+                            <button class="plus">+</button>
+                            <button class="btn-addToCart">Add to Cart</button>
+                            <p class="item-price">Rs.1400</p>
                         </div>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="" alt="" class="item-image">
+                    <img src="./images/deal3.png" alt="" class="item-image">
                     <div class="item-desc">
-                        <p class="item-name"></p>
-                        <p class="item-detail"></p>
+                        <p class="item-name">Deal 3</p>
+                        <p class="item-detail">burger, coke, fries</p>
                         <div class="item-count">
-                            <button class="minus"></button>
-                            <p class="item-total"></p>
-                            <button class="plus"></button>
-                            <p class="item-price"></p>
+                            <select name="" id="sizes">
+                                <option value="small">small</option>
+                                <option value="medium">medium</option>
+                                <option value="large">large</option>
+                            </select>
+                            <button class="customize">✎</button>
+                            <button class="minus">-</button>
+                            <p class="item-total">3</p>
+                            <button class="plus">+</button>
+                            <button class="btn-addToCart">Add to Cart</button>
+                            <p class="item-price">Rs.1050</p>
                         </div>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="" alt="" class="item-image">
+                    <img src="./images/deal4.png" alt="" class="item-image">
                     <div class="item-desc">
-                        <p class="item-name"></p>
-                        <p class="item-detail"></p>
+                        <p class="item-name">Deal 4</p>
+                        <p class="item-detail">3 chicken piece + fries</p>
                         <div class="item-count">
-                            <button class="minus"></button>
-                            <p class="item-total"></p>
-                            <button class="plus"></button>
-                            <p class="item-price"></p>
+                            <select name="" id="sizes">
+                                <option value="small">small</option>
+                                <option value="medium">medium</option>
+                                <option value="large">large</option>
+                            </select>
+                            <button class="customize">✎</button>
+                            <button class="minus">-</button>
+                            <p class="item-total">3</p>
+                            <button class="plus">+</button>
+                            <button class="btn-addToCart">Add to Cart</button>
+                            <p class="item-price">Rs.1000</p>
                         </div>
                     </div>
                 </div>
