Implement cart total calculation and integrate with add-to-cart functionality

--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
             <!-- <div class="cart-total"> -->
                 <div class="alpha">
                     <p>Subtotal</p>
-                    <p>Sales tax</p>
+                    <p>Sales tax(5%)</p>
                     <p>Delivery</p>
                     <p>Total</p>
                 </div>
                 <div class="numeric">
-                    <p>Rs.100</p>
-                    <p>Rs.20</p>
-                    <p>Rs.150</p>
-                    <p>Rs.270</p>
+                    <p class="sub-total"></p>
+                    <p class="sales-tax"></p>
+                    <p class="deliver-charges"></p>
+                    <p class="total-bill"></p>
                 </div>
             <!-- </div> -->
             <button class="btn-checkout">
@@ -102,7 +102,7 @@
                             <p class="item-total">0</p>
                             <button class="plus">+</button>
                             <button class="btn-addToCart">Add to Cart</button>
-                            <p class="item-price">Rs.800</p>
+                            <p class="item-price">800</p>
                         </div>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                             <p class="item-total">3</p>
                             <button class="plus">+</button>
                             <button class="btn-addToCart">Add to Cart</button>
-                            <p class="item-price">Rs.800</p>
+                            <p class="item-price">800</p>
                         </div>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                             <p class="item-total">3</p>
                             <button class="plus">+</button>
                             <button class="btn-addToCart">Add to Cart</button>
-                            <p class="item-price">Rs.800</p>
+                            <p class="item-price">800</p>
                         </div>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
                             <p class="item-total">3</p>
                             <button class="plus">+</button>
                             <button class="btn-addToCart">Add to Cart</button>
-                            <p class="item-price">Rs.800</p>
+                            <p class="item-price">800</p>
                         </div>
                     </div>
                 </div>
@@ -186,7 +186,7 @@
                             <p class="item-total">3</p>
                             <button class="plus">+</button>
                             <button class="btn-addToCart">Add to Cart</button>
-                            <p class="item-price">Rs.1500</p>
+                            <p class="item-price">1500</p>
                         </div>
                     </div>
                 </div>
@@ -206,7 +206,7 @@
                             <p class="item-total">3</p>
                             <button class="plus">+</button>
                             <button class="btn-addToCart">Add to Cart</button>
-                            <p class="item-price">Rs.1400</p>
+                            <p class="item-price">1400</p>
                         </div>
                     </div>
                 </div>
@@ -226,7 +226,7 @@
                             <p class="item-total">3</p>
                             <button class="plus">+</button>
                             <button class="btn-addToCart">Add to Cart</button>
-                            <p class="item-price">Rs.1050</p>
+                            <p class="item-price">1050</p>
                         </div>
                     </div>
                 </div>
@@ -246,7 +246,7 @@
                             <p class="item-total">3</p>
                             <button class="plus">+</button>
                             <button class="btn-addToCart">Add to Cart</button>
-                            <p class="item-price">Rs.1000</p>
+                            <p class="item-price">1000</p>
                         </div>
                     </div>
                 </div>
