fix the cart item remove button

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                     <p class="size-cartItem"></p>
                 </div>
                 <div class="customize-cartItem">
-                    <button class="btn-cartCustomize btnn minus">-</button>
-                    <p class="btn-cartCustomize btnn item-total "></p>
-                    <button class="btn-cartCustomize btnn plus">+</button>
-                    <button class="btn-cartCustomize btnn">✎</button>
-                    <button class="btn-cartCustomize btnn">🗑️</button>
+                    <button id="minus" class="btn-cartCustomize btnn minus">-</button>
+                    <p id="item-total" class="btn-cartCustomize btnn item-total "></p>
+                    <button id="plus" class="btn-cartCustomize btnn plus">+</button>
+                    <button id="customize" class="btn-cartCustomize btnn customize">✎</button>
+                    <button id="delete" class="btn-cartCustomize btnn delete">🗑️</button>
                 </div>
                 <p class="price-cartItem"></p>
             </div>
