fix: update signup and login links to point to the correct pages

--- a/html/login.html
+++ b/html/login.html
@@ -59,7 +59,7 @@
                     <button class="btn-google btn btn-lg btn-light w-100 fs-6"><img src="../images/google.png" class="me-2" style="width: 20px">Sign In with Google</button>
                 </div>
                 <div class="row">
-                    <small>Don't have an account? <a href="#" style="color: #5B154E;">Signup</a></small>
+                    <small>Don't have an account? <a href="./register.html" style="color: #5B154E;">Signup</a></small>
                 </div>
           </div>
        </div> 
