--- a/html/register.html
+++ b/html/register.html
@@ -46,7 +46,7 @@
                     <button class="btn btn-lg btn-primary w-100 fs-6">SignUp</button>
                 </div>
                 <div class="row">
-                    <small>Already have an account? <a href="#" style="color: #5B154E;">Login</a></small>
+                    <small>Already have an account? <a href="./login.html" style="color: #5B154E;">Login</a></small>
                 </div>
           </div>
        </div> 
